# TelegramBot_guide

./: .env.example  .gitignore  pyproject.toml
notebook/: test.ipynb
src/telegram_bot/API/: chatbot.py  main.py
src/telegram_bot/base/: llm.py  types.py
src/telegram_bot/ollama/: llm.py
src/telegram_bot/settings/: config.py  paths.py  variables.py
src/telegram_bot/telegram/: functions.py
