[project]
name = "telegram-bot"
version = "0.1.0"
authors = [
    { name = "Angel Merino", email = "acedeno00@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.122.0",
    "ollama>=0.6.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
]

[project.scripts]
telegram-bot = "telegram_bot:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
